Update stp_07.md